--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,21 @@ try-runtime = [
 	"try-runtime-cli",
 ]
 
+runtime-benchmarks = [
+	# darwinia-network
+	"pangolin-parachain-runtime/runtime-benchmarks",
+	"crab-parachain-runtime/runtime-benchmarks",
+	"darwinia-parachain-runtime/runtime-benchmarks",
+	# paritytech
+	# TODO: https://github.com/paritytech/cumulus/pull/991
+	"polkadot-cli/runtime-benchmarks",
+	"frame-benchmarking",
+	"frame-benchmarking-cli",
+]
+
 [dependencies]
 # crates.io
-array-bytes  = { version = "1.4" }
+array-bytes  = { version = "1.5" }
 async-trait  = { version = "0.1" }
 codec        = { package = "parity-scale-codec", version = "2.3" }
 futures      = { version = "0.3" }
@@ -44,6 +56,8 @@ dc-rpc                     = { path = "rpc" }
 pangolin-parachain-runtime = { path = "runtime/pangolin-parachain" }
 
 # substrate
+frame-benchmarking             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
+frame-benchmarking-cli         = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
