--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,12 +40,12 @@ runtime-benchmarks = [
 # crates.io
 array-bytes  = { version = "1.5" }
 async-trait  = { version = "0.1" }
+clap 		 = { version = "3.0", features = ["derive"] }
 codec        = { package = "parity-scale-codec", version = "2.3" }
 futures      = { version = "0.3" }
 jsonrpc-core = { version = "18.0" }
 log          = { version = "0.4" }
 serde        = { version = "1.0", features = ["derive"] }
-structopt    = { version = "0.3" }
 tempfile     = { version = "3.2" }
 
 # parachain
