--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,7 +101,7 @@ cumulus-relay-chain-interface         = { git = "https://github.com/paritytech/c
 cumulus-relay-chain-local             = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.18" }
 
 # darwinia-network
-pallet-fee-market-rpc-runtime-api = { git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.18" }
+#pallet-fee-market-rpc-runtime-api = { git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.18" }
 
 # polkadot
 polkadot-cli        = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18" }
