--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license     = "GPL-3.0"
 name        = "darwinia-collator"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
-version     = "5.2.0-rc1"
+version     = "5.2.0"
 
 [[bin]]
 name = "darwinia-collator"
@@ -40,7 +40,7 @@ runtime-benchmarks = [
 # crates.io
 array-bytes  = { version = "1.5" }
 async-trait  = { version = "0.1" }
-clap 		 = { version = "3.1", features = ["derive"] }
+clap         = { version = "3.1", features = ["derive"] }
 codec        = { package = "parity-scale-codec", version = "2.3" }
 futures      = { version = "0.3" }
 jsonrpc-core = { version = "18.0" }
