Add xcm-executor dependency for runtime-common

--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -29,7 +29,8 @@ pallet-transaction-payment = { default-features = false, git = "https://github.c
 sp-runtime                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 sp-std                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 # polkadot
-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
+xcm          = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
+xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
 
 [features]
 default = ["std"]
