--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -11,7 +11,8 @@ version     = "5.2.1"
 
 [dependencies]
 # crates.io
-smallvec = { version = "1.8" }
+getrandom = { version = "0.2", features = ["js"] }
+smallvec  = { version = "1.8" }
 # cumulus
 pallet-collator-selection = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
 # darwinia-bridges-substrate
