--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ runtime-benchmarks = [
 	# TODO: https://github.com/paritytech/cumulus/pull/991
 	"polkadot-cli/runtime-benchmarks",
 	"frame-benchmarking",
-	"frame-benchmarking-cli",
 ]
 
 [dependencies]
@@ -57,7 +56,7 @@ pangolin-parachain-runtime = { path = "runtime/pangolin-parachain" }
 
 # substrate
 frame-benchmarking             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
-frame-benchmarking-cli         = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
+frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
