Companion for paritytech/cumulus#1113

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ sc-keystore                    = { git = "https://github.com/paritytech/substrat
 sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 sc-service                     = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-sysinfo                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
