--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ async-trait  = { version = "0.1" }
 clap         = { version = "3.1", features = ["derive"] }
 codec        = { package = "parity-scale-codec", version = "3.1" }
 futures      = { version = "0.3" }
-jsonrpc-core = { version = "18.0" }
+jsonrpsee    = { version = "0.12", features = ["server"] }
 log          = { version = "0.4" }
 serde        = { version = "1.0", features = ["derive"] }
 tempfile     = { version = "3.3" }
