--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -11,7 +11,7 @@ version     = "5.3.0"
 
 [dependencies]
 # crates.io
-jsonrpc-core = { version = "18.0" }
+jsonrpsee = { version = "0.12", features = ["server"] }
 # darwinia-network
 dc-primitives = { path = "../primitives" }
 # paritytech
