--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,12 +39,12 @@ jobs:
         run: |
           mkdir -p shared/crab-parachain-runtime
           mkdir -p shared/darwinia-parachain-runtime
-          tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
+          tar cjSf shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 \
             -C target/x86_64-unknown-linux-gnu/release \
-            darwinia-collator
-          tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
+            darwinia-parachain
+          tar cf shared/darwinia-parachain-x86_64-linux-gnu.tar.zst \
             -C target/x86_64-unknown-linux-gnu/release \
-            darwinia-collator -I pzstd
+            darwinia-parachain -I pzstd
 
           mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.wasm shared/crab-parachain-runtime
           mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.wasm shared/darwinia-parachain-runtime
@@ -128,11 +128,11 @@ jobs:
       - name: Extract package
         run: |
           mkdir -p dist
-          tar -xvf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 -C dist/
+          tar -xvf shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 -C dist/
 
       - name: Build and publish docker image
         run: |
-          IMAGE_NAME=darwinia-collator
+          IMAGE_NAME=darwinia-parachain
           IMAGE_PREFIX=quay.io/darwinia-network
           IMAGE_PUSH_NAME_TAG=${IMAGE_PREFIX}/${IMAGE_NAME}:${GIT_TAG_NAME}
           IMAGE_PUSH_NAME_SHA=${IMAGE_PREFIX}/${IMAGE_NAME}:sha-${SHA}
@@ -160,8 +160,8 @@ jobs:
         run: |
           mkdir -p deploy
 
-          mv shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 deploy/
-          mv shared/darwinia-collator-x86_64-linux-gnu.tar.zst deploy/
+          mv shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 deploy/
+          mv shared/darwinia-parachain-x86_64-linux-gnu.tar.zst deploy/
 
           mv shared/crab-parachain-runtime/*.compact.compressed.wasm deploy/
           mv shared/crab-parachain-runtime/*.compact.compressed.json deploy/
