--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Collect shared
         run: |
           mkdir -p shared
-          tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
+          tar cjSf shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 \
             -C target/x86_64-unknown-linux-gnu/release \
-            darwinia-collator
+            darwinia-parachain
 
       - name: Upload shared
         uses: actions/upload-artifact@v2
@@ -71,11 +71,11 @@ jobs:
       - name: Extract package
         run: |
           mkdir -p dist
-          tar -xvf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 -C dist/
+          tar -xvf shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 -C dist/
 
       - name: Build and publish docker image
         run: |
-          IMAGE_NAME=darwinia-collator
+          IMAGE_NAME=darwinia-parachain
           IMAGE_PREFIX=quay.io/darwinia-network
           IMAGE_PUSH_NAME_SHA=${IMAGE_PREFIX}/${IMAGE_NAME}:sha-${SHA}
           docker build \
