Companion for paritytech/cumulus#1241
 Conflicts:
	Cargo.lock

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 authors     = ["Darwinia Network <hello@darwinia.network>"]
 build       = "build.rs"
-description = "Darwinia Collator"
+description = "Darwinia Parachain"
 edition     = "2018"
 homepage    = "https://darwinia.network"
 license     = "GPL-3.0"
-name        = "darwinia-collator"
+name        = "darwinia-parachain"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
 version     = "5.3.0"
 
 [[bin]]
-name = "darwinia-collator"
+name = "darwinia-parachain"
 path = "src/main.rs"
 
 [features]
@@ -118,3 +118,18 @@ members = [
 	"rpc",
 	"runtime/*",
 ]
+
+[patch."https://github.com/darwinia-network/darwinia-messages-substrate"]
+bp-message-dispatch    = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/message-dispatch" }
+bp-messages            = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/messages" }
+bp-pangolin            = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/chain-pangolin" }
+bp-pangolin-parachain  = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/chain-pangolin-parachain" }
+bp-polkadot-core       = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/polkadot-core" }
+bp-runtime             = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/runtime" }
+bp-crab                = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/chain-crab" }
+bp-crab-parachain      = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/primitives/chain-crab-parachain" }
+bridge-runtime-common  = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/bin/runtime-common" }
+pallet-bridge-dispatch = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/dispatch" }
+pallet-bridge-grandpa  = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/grandpa" }
+pallet-bridge-messages = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/messages" }
+pallet-fee-market      = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/fee-market" }
